[package]
name = "gridwizard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = [
    "api-4-3",
] }
dicontext = { path = "deps/di_context" }
egui = "*"
